# jitvm

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci-mac.yml  ci.yml
docs/: architecture.md  ir-reference.md  jit-internals.md  v0.2-plan.md
examples/: ackermann_small.jv  collatz.jv  fact.jv  factorial_loop.jv  fib.jv  gcd.expected  gcd.jv  hello.jv  mutrec.jv
src/: ast.rs  heap.rs  interp.rs  ir.rs  jit.rs  lexer.rs  lib.rs  main.rs  parser.rs  value.rs  x86.rs
tests/: error_tests.rs  heap_test.rs  lang_tests.rs  programs_test.rs
tests/programs/: arith.expected  arith.jv  cmp.jv  comments.jv  deep_recursion.jv  early_return.jv  fact.jv  fib.jv  hello.jv  loop.jv  mod.jv  mutual.jv  nested_calls.jv  nested_if.jv  print_many.jv  shortcircuit.jv  six_args.jv  str_concat.jv  str_empty_concat.jv  str_len.jv  str_multi.jv  unary.expected  unary.jv  wrap.expected  wrap.jv
tests/programs_interp/: str_gc_stress.jv  str_loop.jv
