[package]
name = "jitvm"
version = "0.1.0"
edition = "2021"
description = "a tiny i64-only language with a bytecode interpreter and a hand-rolled x86-64 jit"
license = "MIT"
repository = "https://github.com/f4rkh4d/jitvm"
readme = "README.md"
keywords = ["jit", "compiler", "x86-64", "interpreter", "language"]
categories = ["compilers", "development-tools"]

[dependencies]

[target.'cfg(target_arch = "x86_64")'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
